<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    tools:context=".MainActivity4">

    <TextView
        android:id="@+id/textView"
        android:layout_width="196dp"
        android:layout_height="28dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="195dp"
        android:layout_marginBottom="589dp"
        android:text="@string/izm"
        android:textColor="@color/white"
        android:textSize="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <EditText
        android:textSize="18dp"
        android:id="@+id/editText1"
        android:background="@color/white"
        android:layout_width="312dp"
        android:layout_height="32dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="492dp"
        android:hint="@string/zagolovok"
        android:paddingLeft="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText2"
        android:background="@color/white"
        android:textSize="18dp"
        android:layout_width="148dp"
        android:layout_height="32dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="164dp"
        android:layout_marginEnd="188dp"
        android:layout_marginBottom="444dp"
        android:hint="@string/time"
        android:paddingLeft="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:textSize="18dp"
        android:id="@+id/editText3"
        android:background="@color/white"
        android:layout_width="148dp"
        android:layout_height="32dp"
        android:layout_marginStart="188dp"
        android:layout_marginTop="164dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="444dp"
        android:hint="@string/data"
        android:paddingLeft="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:textSize="18dp"
        android:id="@+id/editText4"
        android:layout_width="312dp"
        android:layout_height="96dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="212dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="332dp"
        android:background="@color/white"
        android:hint="@string/opisanie"
        android:paddingLeft="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/b4"
        android:layout_width="312dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="577dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@color/lgreen"
        android:onClick="b4"
        android:text="@string/zapis"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.989" />

    <Button
        android:id="@+id/b5"
        android:layout_width="312dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="577dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@color/red"
        android:onClick="b5"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.461" />

</androidx.constraintlayout.widget.ConstraintLayout>