<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="145dp"
        android:layout_height="28dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="195dp"
        android:layout_marginBottom="589dp"
        android:text="@string/reg"
        android:textColor="@color/white"
        android:textSize="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <EditText
        android:id="@+id/editText1"
        android:background="@color/white"
        android:layout_width="312dp"
        android:layout_height="32dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="224dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="384dp"
        android:hint="@string/name"
        android:paddingLeft="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText2"
        android:background="@color/white"
        android:layout_width="312dp"
        android:layout_height="32dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="272dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="336dp"
        android:hint="@string/login"
        android:paddingLeft="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/editText3"
        android:background="@color/white"
        android:layout_width="312dp"
        android:layout_height="32dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="320dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="288dp"
        android:hint="@string/password"
        android:paddingLeft="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button

        android:id="@+id/button1"
        android:layout_width="312dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="368dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="224dp"
        android:backgroundTint="@color/lgreen"
        android:onClick="b1"
        android:text="@string/reg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>